# MLPortfolio

./: .gitignore  .gitmodules  LICENSE  README.md
embed/text-img/tf2/: .gitignore  data-split.py  filter-grapheme-counts.py  grapheme_counts.tsv  grapheme_counts_9995.tsv  grapheme_idx.py  gutenberg.py  images.py  img-enc-dec.py  img_enc_dec.py  text-enc-dec.py  text-img-emb-train.py  text-img-embed.py  text_enc_dec.py  vocab-index.py  word-embed.py  wptitles.py
embed/text-img/tf2/.helix/: languages.toml
image-super-resolution/: .gitignore  image-sr-run.py  image-sr-train.py  model.py
image-super-resolution/.helix/: languages.toml
image-super-resolution/rust/: Cargo.toml  clippy.toml  train.sh
image-super-resolution/rust/src/: main.rs
imdb-sentiment-analysis/: README.md  imdb_sa_common.py
imdb-sentiment-analysis/flax/: imdb-sentiment.py
imdb-sentiment-analysis/jax/: conda-packages.txt  imdb-sentiment.py  init-venv.sh  other-packages.txt
imdb-sentiment-analysis/jax/.helix/: languages.toml
imdb-sentiment-analysis/pytorch/: imdb-sentiment.py  pyproject.toml
jax/: imdb-sentiment.py
microlens/: README.md
microlens/flax/: flax-microlens.py
microlens/jax/: jax-microlens.py
nsynth/tf2/: instrument-to-audio.py  instrument-to-audio2.py  nsynth-tf2.py  packages.txt  packages2.txt
pos-enc-invert/: 100-inits_20000-iters_32-dims_100-len_lr1e-3.csv  packages.txt  pos-enc-invert.py
pytorch/: imdb-sentiment.py  pyproject.toml
rationality/tf2/: dataprep.py  packages.sh  rationality.py  rationality2.py
rationality/tf2/.helix/: languages.toml
