[package]
name = "image-sr"
version = "0.1.0"
edition = "2021"

[dependencies]
# burn = { version = "0.15.0", features = ["autodiff", "dataset", "wgpu"] }
clap = { version = "4.5.21", features = ["derive"] }
image = "0.25.5"
rand = "0.8.5"
walkdir = "2.5.0"

[dependencies.burn]
# git = "https://github.com/tracel-ai/burn.git"
# rev = "0dd228cdcdb0d2c2704518ff2ee4ba7fd5f91cd8"
version = "0.15.0"

features = ["autodiff", "dataset", "wgpu"]
